--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
+    "@ionic-native/core": "^5.36.0",
     "@ionic-native/sqlite": "^5.36.0",
     "@ionic/angular": "^8.0.0",
     "cordova-sqlite-storage": "^7.0.0",
