dando funcionalidad a calendario

--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@fullcalendar/angular": "^6.1.17",
+    "@fullcalendar/core": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/google-calendar": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/sqlite": "^5.36.0",
     "@ionic/angular": "^8.0.0",
