--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myappmovil",
+  "name": "madres-conectadas2.0",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -63,6 +63,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.2.1",
     "eslint-plugin-prefer-arrow": "1.2.2",
+    "jasmine": "^5.8.0",
     "jasmine-core": "~5.1.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
@@ -70,6 +71,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "protractor": "^7.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.1.6",
     "zone.js": "^0.13.3"
   },
