--- a/package.json
+++ b/package.json
@@ -14,68 +14,69 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.12",
-    "@angular/cdk": "19.2.14",
-    "@angular/common": "^16.2.12",
-    "@angular/compiler": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/forms": "^16.2.12",
-    "@angular/material": "19.2.14",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/router": "^16.2.12",
-    "@capacitor/android": "^7.4.0",
+    "@angular/animations": "16.2.12",
+    "@angular/cdk": "16.2.14",
+    "@angular/common": "16.2.12",
+    "@angular/compiler": "16.2.12",
+    "@angular/core": "16.2.12",
+    "@angular/forms": "16.2.12",
+    "@angular/material": "16.2.14",
+    "@angular/platform-browser": "16.2.12",
+    "@angular/platform-browser-dynamic": "16.2.12",
+    "@angular/router": "16.2.12",
+    "@capacitor/android": "7.4.0",
     "@capacitor/app": "7.0.1",
-    "@capacitor/camera": "^7.0.1",
-    "@capacitor/core": "^7.4.0",
-    "@capacitor/geolocation": "^7.1.2",
+    "@capacitor/camera": "7.0.1",
+    "@capacitor/core": "7.4.0",
+    "@capacitor/geolocation": "7.1.2",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
-    "@fullcalendar/angular": "^6.1.17",
-    "@fullcalendar/core": "^6.1.17",
-    "@fullcalendar/daygrid": "^6.1.17",
-    "@fullcalendar/google-calendar": "^6.1.17",
-    "@fullcalendar/interaction": "^6.1.17",
-    "@ionic-native/core": "^5.36.0",
-    "@ionic-native/sqlite": "^5.36.0",
-    "@ionic/angular": "^8.0.0",
-    "cordova-sqlite-storage": "^7.0.0",
-    "ionicons": "^7.0.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "@fullcalendar/angular": "6.1.17",
+    "@fullcalendar/core": "6.1.17",
+    "@fullcalendar/daygrid": "6.1.17",
+    "@fullcalendar/google-calendar": "6.1.17",
+    "@fullcalendar/interaction": "6.1.17",
+    "@ionic-native/core": "5.36.0",
+    "@ionic-native/sqlite": "5.36.0",
+    "@ionic/angular": "6.7.5",
+    "cordova-sqlite-storage": "7.0.0",
+    "ionicons": "7.0.0",
+    "rxjs": "6.6.7",
+    "tslib": "2.3.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.12",
-    "@angular-eslint/builder": "^17.0.0",
-    "@angular-eslint/eslint-plugin": "^17.0.0",
-    "@angular-eslint/eslint-plugin-template": "^17.0.0",
-    "@angular-eslint/schematics": "^17.0.0",
-    "@angular-eslint/template-parser": "^17.0.0",
-    "@angular/cli": "^16.2.12",
-    "@angular/compiler-cli": "^16.2.12",
-    "@angular/language-service": "19.2.14",
+    "@angular-devkit/build-angular": "16.2.12",
+    "@angular-eslint/builder": "16.1.1",
+    "@angular-eslint/eslint-plugin": "16.1.1",
+    "@angular-eslint/eslint-plugin-template": "16.1.1",
+    "@angular-eslint/schematics": "16.1.1",
+    "@angular-eslint/template-parser": "16.1.1",
+    "@angular/cli": "16.2.12",
+    "@angular/compiler-cli": "16.2.12",
+    "@angular/language-service": "16.2.12",
     "@capacitor/cli": "7.2.0",
-    "@ionic/angular-toolkit": "^12.0.0",
-    "@types/jasmine": "~5.1.0",
-    "@typescript-eslint/eslint-plugin": "^8.18.0",
-    "@typescript-eslint/parser": "^8.18.0",
-    "eslint": "^8.57.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsdoc": "^48.2.1",
+    "@ionic/angular-toolkit": "9.0.0",
+    "@types/jasmine": "5.1.0",
+    "@typescript-eslint/eslint-plugin": "8.18.0",
+    "@typescript-eslint/parser": "8.18.0",
+    "colors": "^1.4.0",
+    "eslint": "8.57.1",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsdoc": "48.2.1",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine": "^5.8.0",
-    "jasmine-core": "~5.1.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "protractor": "^7.0.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.1.6",
-    "zone.js": "^0.13.3"
+    "jasmine": "5.8.0",
+    "jasmine-core": "5.1.0",
+    "jasmine-spec-reporter": "5.0.0",
+    "karma": "6.4.0",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-coverage": "2.2.0",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.1.0",
+    "protractor": "7.0.0",
+    "ts-node": "10.9.2",
+    "typescript": "5.1.6",
+    "zone.js": "0.13.3"
   },
   "description": "An Ionic project"
 }
